--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sit 2C Montale</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <header>
-            <h1>
-                sito 2C Montale 
-            </h1>
-            <h2>
-                secondo titolo
-            </h2> 
-        </header>
-        <main>
-            <p>
-                ciao
-            </p>
-            <p>presto immagine e ink </p>
-            contenuto principale 
-            <img src="horse.jpg" alt="horse">
+    <header class="intestazione">
+        <h1>progetto tavola periodica</h1>
+<nav>
+<a href="index.html">home</a>
+<a href="bio.html">biografie</a>
+<a href="tavola.html">tavola</a>
+
+</nav>
+        </header>       
+         <main>
+      <img width="550" src="Tavola_periodica.png" alt="tavola periodica">
+      <p>La tavola periodica degli elementi (o semplicemente tavola periodica o tavola di Mendeleev) è lo schema con cui sono ordinati gli elementi chimici sulla base del loro numero atomico Z e del numero di elettroni presenti negli orbitali atomici s, p, d, f.
+
+        È la prima e più utilizzata versione di tavola periodica, ideata nel 1869 dal chimico russo Dmitrij Ivanovič Mendeleev[1] e, in modo indipendente, dal chimico tedesco Julius Lothar Meyer[2]; contava in principio numerosi spazi vuoti per gli elementi previsti dalla teoria, alcuni dei quali sarebbero stati scoperti solo nella seconda metà del Novecento.</p>
         </main>
         <footer>
-            fondo pagina 
+
         </footer>
 </body>
 </html>
