--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header class="intestazione">
         <h1>progetto tavola periodica</h1>
 <nav>
-<a href="index.html">home</a>
-<a href="bio.html">biografie</a>
-<a href="tavola.html">tavola</a>
+<a class="link-navigazione" href="index.html">home</a>
+<a class="link-navigazione" href="bio.html">biografie</a>
+<a class="link-navigazione" href="tavola.html">tavola</a>
 
 </nav>
         </header>       
