--- a/tavola.html
+++ b/tavola.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <header>
+        <header class="intestazione">
             <h1>Funny Horse</h1>
             <nav>
-            <a href="index.html">home</a>
-            <a href="bio.html">biografie</a>
-            <a href="tavola.html">tavola</a>
+            <a class="link-navigazione" href="index.html">home</a>
+            <a class="link-navigazione" href="bio.html">biografie</a>
+            <a class="link-navigazione" href="tavola.html">tavola</a>
             
             </nav>
         </header>
-        <main>
-            <img src="horse.jpg" alt="horse">
+        <main id="contenitore">
         </main>
         <footer>
 
         </footer>
 </body>
+<script src="programma.js"></script>
 </html>
