--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img width="550" src="Tavola_periodica.png" alt="tavola periodica">
       <p>La tavola periodica degli elementi (o semplicemente tavola periodica o tavola di Mendeleev) è lo schema con cui sono ordinati gli elementi chimici sulla base del loro numero atomico Z e del numero di elettroni presenti negli orbitali atomici s, p, d, f.
 
-        È la prima e più utilizzata versione di tavola periodica, ideata nel 1869 dal chimico russo Dmitrij Ivanovič Mendeleev[1] e, in modo indipendente, dal chimico tedesco Julius Lothar Meyer[2]; contava in principio numerosi spazi vuoti per gli elementi previsti dalla teoria, alcuni dei quali sarebbero stati scoperti solo nella seconda metà del Novecento.</p>
+        È la prima e più utilizzata versione di tavola periodica, ideata nel 1869 dal chimico russo Dmitrij Ivanovič Mendeleev e, in modo indipendente, dal chimico tedesco Julius Lothar Meyer; contava in principio numerosi spazi vuoti per gli elementi previsti dalla teoria, alcuni dei quali sarebbero stati scoperti solo nella seconda metà del Novecento.</p>
         </main>
         <footer>
 
