--- a/tavola.html
+++ b/tavola.html
@@ -17,11 +17,12 @@
             </nav>
         </header>
         <main id="contenitore">
-            
+
         </main>
         <footer>
 
         </footer>
 </body>
+<script src="PeriodicTable.js"></script>
 <script src="programma.js"></script>
 </html>
