--- a/tavola.html
+++ b/tavola.html
@@ -17,6 +17,14 @@
             </nav>
         </header>
         <main id="contenitore">
+            <div class = "scheda-elemento">
+                <h2 id="titolo-scheda"></h2>
+                <img id="immagine-scheda" width="250" src="" alt="">
+                <p id="descrizione-scheda"></p>
+                <p id="categoria-scheda"> </p>
+                <p id="density-scheda"> </p>
+            
+            </div>
 
         </main>
         <footer>
